--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       Esta herramienta permite visualizar manzanas urbanas y su prioridad de intervención en colonias de la Ciudad de México.
     </p>
     <ol class="intro-pasos">
-      <li>Selecciona una <strong>alcaldía</strong>.</li>
-      <li>Escribe y selecciona una <strong>colonia</strong> de la lista.</li>
-      <li>Revisa el <strong>mapa</strong> para ver las manzanas dentro de la colonia y su prioridad.</li>
-      <li>Usa la <strong>tabla</strong> para explorar todas las colonias y filtrar por prioridad y marginación.</li>
-      <li>Consulta el <strong>resumen y las gráficas</strong> para interpretar la información agregada.</li>
-    </ol>
+  <li>Selecciona una <strong>alcaldía</strong>.</li>
+  <li>Escribe y selecciona una <strong>colonia</strong> de la lista.</li>
+  <li>Revisa el <strong>mapa</strong> para ver la ubicación y las manzanas de la colonia.</li>
+  <li>Usa la <strong>tabla</strong> para explorar todas las colonias y filtrar por <strong>prioridad de intervención</strong> y <strong>grado de marginación</strong>.</li>
+  <li>Consulta el <strong>resumen y las gráficas</strong> para interpretar la información agregada.</li>
+</ol>
   </section>
 
   <!-- KPIs globales (ciudad completa) -->
@@ -97,15 +97,18 @@
 
   <!-- MAPA -->
   <section class="map-section section-block">
-    <div class="map-header">
-      <h3>Mapa de colonias y manzanas</h3>
-      <button id="btnFullscreen" class="btn-fullscreen" aria-label="Ver mapa en pantalla completa">
-        ⤢ Ver mapa grande
-      </button>
-    </div>
+   
+    <h3>Mapa de colonias y manzanas</h3>
 
-    <div class="map-wrapper" id="mapWrapper">
-      <div id="map"></div>
+<div class="map-wrapper" id="mapWrapper">
+  <button id="btnFullscreen" class="btn-fullscreen" aria-label="Ver mapa en pantalla completa">
+    ⤢ Ver mapa grande
+  </button>
+  <div id="map"></div>
+  <div id="mapLoading" class="map-loading">Procesando manzanas…</div>
+   
+
+      
       <div id="mapLoading" class="map-loading">Procesando manzanas…</div>
 
       <!-- LEYENDA -->
@@ -528,17 +531,19 @@ function cargarCapasEnMapa() {
 // TABLA + KPIs (a partir de coloniasAgg)
 // =======================
 
-function construirDatosTabla() {
-  tablaDatosColonias = coloniasAgg.map(e => ({
-    idx:  e.idx,
-    alc:  e.nom_mun,
-    col:  e.colonia,
-    pr:   e.prio_colonia,
-    gm:   e.gm_2020,
-    pob:  Math.round(e.pob_colonia || 0),
-    ha:   e.area_ha || 0,
-    manz: e.n_manz || 0
-  }));
+tablaDatosColonias = coloniasFeatures.map((f, idx) => {
+  const p = f.properties || {};
+  const alc = p.NOM_MUN || "";
+  const col = p.COLONIA || "";
+  const cp  = p.CP || "";
+  const pr  = p.prioridad || "Sin dato";
+  const pob = p.POBTOT != null ? Math.round(p.POBTOT) : 0;
+  const areaKm2 = p.area_km2 != null ? p.area_km2 : 0;
+  const ha = areaKm2 * 100;
+  const manz = p.CVEGEO_count != null ? p.CVEGEO_count : 0;
+  const gm2020 = p.GM_2020 || "";
+  return { idx, alc, col, cp, pr, pob, ha, manz, gm2020 };
+});
 }
 
 function poblarSelectFiltrosTabla() {
@@ -593,22 +598,23 @@ function actualizarKPIsyCharts(filas) {
     porPrioHa[pr]  = (porPrioHa[pr]  || 0) + (r.ha  || 0);
   });
 
-  const totalAltaMuyAlta   = globalAltaMuyAltaColonias;
-  const pobAltaMuyAlta     = globalAltaMuyAltaPob;
-  const haAltaMuyAlta      = globalAltaMuyAltaHa;
+  // KPIs globales basados en totales de ciudad (no filtros)
+const totalAltaMuyAlta   = globalAltaMuyAltaColonias;
+const pobAltaMuyAlta     = globalAltaMuyAltaPob;
+const haAltaMuyAlta      = globalAltaMuyAltaHa;
 
-  const porcColoniasAlta   = totalColoniasBase ? ((totalAltaMuyAlta / totalColoniasBase) * 100).toFixed(1) : 0;
-  const porcPobAlta        = totalPobBase      ? ((pobAltaMuyAlta   / totalPobBase)      * 100).toFixed(1) : 0;
-  const porcHaAlta         = totalHaBase       ? ((haAltaMuyAlta    / totalHaBase       ) * 100).toFixed(1) : 0;
+const porcColoniasAlta   = totalColoniasBase ? ((totalAltaMuyAlta / totalColoniasBase) * 100).toFixed(1) : 0;
+const porcPobAlta        = totalPobBase      ? ((pobAltaMuyAlta   / totalPobBase)      * 100).toFixed(1) : 0;
+const porcHaAlta         = totalHaBase       ? ((haAltaMuyAlta    / totalHaBase)       * 100).toFixed(1) : 0;
 
-  document.getElementById('kpiTotalColonias').textContent =
-    totalColoniasBase.toLocaleString("es-MX");
-  document.getElementById('kpiColoniasAlta').textContent  =
-    `${totalAltaMuyAlta.toLocaleString("es-MX")} (${porcColoniasAlta}%)`;
-  document.getElementById('kpiPobAlta').textContent       =
-    `${pobAltaMuyAlta.toLocaleString("es-MX")} (${porcPobAlta}%)`;
-  document.getElementById('kpiHaAlta').textContent        =
-    `${haAltaMuyAlta.toFixed(3).toLocaleString("es-MX")} (${porcHaAlta}%)`;
+document.getElementById('kpiTotalColonias').textContent =
+  totalColoniasBase.toLocaleString("es-MX");
+document.getElementById('kpiColoniasAlta').textContent  =
+  `${totalAltaMuyAlta.toLocaleString("es-MX")} (${porcColoniasAlta}%)`;
+document.getElementById('kpiPobAlta').textContent       =
+  `${pobAltaMuyAlta.toLocaleString("es-MX")} (${porcPobAlta}%)`;
+document.getElementById('kpiHaAlta').textContent        =
+  `${Number(haAltaMuyAlta.toFixed(3)).toLocaleString("es-MX")} (${porcHaAlta}%)`;
 
   const contexto = textoContextoFiltros();
   const resumenEl = document.getElementById('tablaResumen');
@@ -843,12 +849,13 @@ function resaltarColoniaYManzanas(entryAgg) {
     const estCol = estiloPrioridad(prioridadColonia);
     const prioCol = (prioridadColonia || "Sin dato").trim();
 
-    layerColonia.setStyle({
-      color: estCol.color,
-      weight: 3,
-      fillColor: estCol.fill,
-      fillOpacity: 0.15
-    });
+   layerColonia.setStyle({
+  color: est.color,
+  weight: 3,
+  fillColor: est.fill,
+  fillOpacity: 0  // sin relleno para ver manzanas
+});
+
 
     const pobTxt = entryAgg.pob_colonia ? entryAgg.pob_colonia.toLocaleString("es-MX") : "";
     const haTxt  = entryAgg.area_ha    ? entryAgg.area_ha.toFixed(2)                : "";
@@ -1004,23 +1011,21 @@ document.addEventListener('DOMContentLoaded', () => {
     const pob       = entry.pob_colonia || 0;
     const ha        = entry.area_ha || 0;
 
-    const kpiHtml =
-      `<div class="kpi-card">
-        <p><span class="label-bold">Alcaldía:</span> ${normalizarTexto(alc)}</p>
-        <p><span class="label-bold">Colonia:</span> ${normalizarTexto(col)}</p>
-        <p><span class="label-bold">Prioridad (colonia):</span>
-           <span class="badge-prioridad ${prioridadClass(prioridad)}">${prioridad}</span></p>
-        <p><span class="label-bold">GM_2020:</span> ${gm || 'Sin dato'}</p>
-        <p><span class="label-bold">Población 2020:</span> ${pob.toLocaleString("es-MX")} hab.</p>
-        <p><span class="label-bold">Superficie:</span> ${ha.toFixed(2)} ha</p>
-        <p class="kpi-number-line">
-           <span class="label-bold">No. de manzanas dentro de la colonia:</span>
-           <span class="kpi-value">${numManz.toLocaleString("es-MX")}</span>
-        </p>
-        <p class="kpi-secondary">
-          En el mapa, cada manzana se muestra con el color de su propia prioridad y datos de población, viviendas e infraestructura azul.
-        </p>
-      </div>`;
+    const gm2020 = p.GM_2020 || "";
+
+const kpiHtml =
+  `<div class="kpi-card">
+    <p><span class="label-bold">Alcaldía:</span> ${normalizarTexto(alc)}</p>
+    <p><span class="label-bold">Colonia:</span> ${normalizarTexto(col)}</p>
+    <p><span class="label-bold">CP:</span> ${cp || 'No disponible'}</p>
+    <p><span class="label-bold">Grado de marginación 2020:</span> ${gm2020 || 'No disponible'}</p>
+    <p><span class="label-bold">Prioridad de intervención (Manzanas Verdes):</span>
+       <span class="badge-prioridad ${prioridadClass(prioridad)}">${prioridad}</span></p>
+    <p class="kpi-number-line">
+       <span class="label-bold">No. de manzanas dentro de la colonia:</span>
+       <span class="kpi-value">${numManz.toLocaleString("es-MX")}</span>
+    </p>
+  </div>`;
 
     resultadoDiv.innerHTML = kpiHtml;
     resultadoDiv.style.display='block';
